Replaced '@include' with '@import'

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -11,9 +11,9 @@
  * Debug            Gutter, Breakpoints
  ******************************************************************************/
 
-@include 'gutter';
-@include 'breakpoints';
-@include 'units-tools';
-@include 'container';
-@include 'grid';
-@include 'debug';
+@import 'gutter';
+@import 'breakpoints';
+@import 'units-tools';
+@import 'container';
+@import 'grid';
+@import 'debug';
