Removed inline comments (prettier was in trouble with them)

--- a/src/css/_debug.scss
+++ b/src/css/_debug.scss
@@ -57,9 +57,9 @@ $debug-zone-text-color: chartreuse;
         content: $breakpoint-name; // name
       }
       .debug-zone__item--bp::after {
-        content: ' (' + bp($breakpoint-name) + ' / ' + / / value in em
-          em2rem(bp($breakpoint-name)) + ' / ' + / / value in rem
-          em2px(bp($breakpoint-name)) + ')'; // value in px
+        content: ' (' + bp($breakpoint-name) +
+          em2rem(bp($breakpoint-name)) + ' / ' +
+          em2px(bp($breakpoint-name)) + ')';
       }
     }
   }
