--- a/src/css/_debug.scss
+++ b/src/css/_debug.scss
@@ -36,8 +36,6 @@ $debug-zone-text-color: chartreuse;
       font-weight: bold;
       text-transform: uppercase;
     }
-    &:after {
-    }
   }
 }
 
@@ -45,10 +43,11 @@ $debug-zone-text-color: chartreuse;
 .debug.debug--breakpoints {
   // In case ther is no 'min' breakpoint
   .debug-zone__item--bp:before {
-    content: 'min';
+    content: "min";
   }
+
   .debug-zone__item--bp:after {
-    content: ' (0em / 0rem / 0px)';
+    content: " (0em / 0rem / 0px)";
   }
 
   @each $breakpoint-name, $breakpoint-width in $breakpoints {
@@ -57,9 +56,8 @@ $debug-zone-text-color: chartreuse;
         content: $breakpoint-name; // name
       }
       .debug-zone__item--bp::after {
-        content: ' (' + bp($breakpoint-name) + ' / ' +
-          em2rem(bp($breakpoint-name)) + ' / ' +
-          em2px(bp($breakpoint-name)) + ')';
+        content: " (" + bp($breakpoint-name) + " / " + em2rem(bp($breakpoint-name)) + " / " +
+          em2px(bp($breakpoint-name)) + ")";
       }
     }
   }
